k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: konsumo
spec:
  selector:
    matchLabels:
      app: konsumo
      name: konsumo
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  revisionHistoryLimit: 5
  template:
    metadata:
      labels:
        app: konsumo
        name: konsumo
    spec:
      restartPolicy: Always
      serviceAccountName: konsumo
      imagePullSecrets:
      - name: dockerhub-registry
      containers:
        - name: konsumo
          image: IMAGE
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP  
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 2
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 2
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            limits:
              cpu: 200m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 192Mi
          volumeMounts:
            - name: konsumo-ssl
              mountPath: /ssl  
      volumes:
        - name: konsumo-ssl
          secret:
            secretName: konsumo-ssl
