k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: konsumo
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: konsumo
    name: konsumo
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
