k8s/base/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: konsumo
spec:
  host: <PATCH_ME_PLEASE>
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
  to:
    kind: Service
    name: konsumo
    weight: 100
  wildcardPolicy: None
